--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -1,4 +1,5 @@
-FROM debian:buster
+ARG BALENA_MACHINE_NAME="%%BALENA_MACHINE_NAME%%"
+FROM balenalib/${BALENA_MACHINE_NAME}-debian:buster 
 
 # if we get a bunch of these installed up front in one shot (assume a desktop so plenty of memory to do all at once)
 # then the FPP_Install step is faster.   In addition, docker will cache this result
@@ -36,6 +37,18 @@ RUN ( yes | /root/FPP_Install.sh $EXTRA_INSTALL_FLAG --skip-apt-install --skip-v
 RUN /opt/fpp/scripts/init_pre_network
 
 VOLUME /home/fpp/media
+
+RUN ln -s /opt/fpp/bin.bbb/fpp /opt/fpp/src/fpp
+RUN ln -s /opt/fpp/bin.bbb/fppd /opt/fpp/src/fppd
+RUN ln -s /opt/fpp/bin.bbb/fppmm /opt/fpp/src/fppmm
+
+RUN ln -s /opt/fpp/bin.pi/fpp /opt/fpp/src/fpp
+RUN ln -s /opt/fpp/bin.pi/fppd /opt/fpp/src/fppd
+RUN ln -s /opt/fpp/bin.pi/fppmm /opt/fpp/src/fppmm
+
+
+RUN ln -s /opt/fpp/www/.htaccess /opt/fpp/media/config/.htaccess
+RUN ln -s /opt/fpp/www/proxy/.htaccess /opt/fpp/media/config/proxies
 
 #      HTTP  DDP      e1.31    Multisync  FPPD/HTTP    Other
 EXPOSE 80    4048/udp 5568/udp 32320/udp    32322      9000/udp 9000/tcp
